[package]
name = "rdp"
version = "0.1.0"
edition = "2021"

[lib]
name = "rdp"
crate-type = ["staticlib", "cdylib", "lib"]

[features]
default = ["f3dzex2"]
f3dlp = []
f3dex = []
f3dex2 = []
f3dzex2 = ["f3dex2"]


[dependencies]
byteorder = "1.4.3"
wasm-bindgen = "0.2.45"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc = "0.2.140"
glam = "0.23.0"
lazy_static = "1.4.0"
